Работа над ошибкой #2,3. class InMemoryHistoryManager, метод public void add(Task task)